--- a/style.css
+++ b/style.css
@@ -11,10 +11,12 @@ body{
 }
 .quote-box{
     background: #fff;
-    width: 700px;
+    width: 90%;
+    max-width: 700px;
     position: absolute;
     top: 50%;
     left: 50%;
+    margin: 40px auto;
     transform: translate(-50%,-50%);
     padding: 40px;
     border-radius: 10px;
